//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Project Name" {
  database_type: 'PostgreSQL'
  Note: 'Empylo description'
}

Table CompanyUser {
  id String [pk]
  email String [unique, not null]
  created_at DateTime [default: `now()`]
  companyName String
  phoneNumber String
  password String
  passwordResetCode String [unique]
  lastLogin DateTime
  passportImg String
  isActive Boolean [default: false]
  updated_at DateTime
  isEmailVerified Boolean [default: false]
  verificationCode String [unique]
  industry String
  website String
  companyDescription String
  status UserStatus [not null, default: 'inactive']
  address String
  addressCity String
  addressState String
  emailNotification Boolean [default: false]
  campaignNtification Boolean [default: false]
  termsConditions Boolean [default: false]
  membersList User [not null]
  company_circle CompanyCircles [not null]
}

Table CompanyCircles {
  id String [pk]
  created_at DateTime [default: `now()`]
  updated_at DateTime
  coyCircleName String [unique]
  coyCircleDescription String
  coyCircleShareLink String
  wellbeingScore String
  activityLevel ActivityLevel [not null, default: 'low']
  companyUser CompanyUser
  companyUserId String
  coyCircleStatus UserStatus [not null, default: 'inactive']
  coyCircleNos String [unique]
  memberList User [not null]
  circleImg String
  user User
  userAttachedID String
}

Table User {
  id String [pk]
  email String [unique, not null]
  created_at DateTime [default: `now()`]
  firstName String
  lastName String
  phoneNumber String [unique]
  ageRange String
  ethnicity String
  gender UserGender
  maritalStatus String
  disability String
  DOB String
  accountType UserAccount [not null, default: 'personalUser']
  department String
  jobRole String
  password String
  role SystemRole [not null, default: 'user']
  passwordResetCode String [unique]
  companyUser CompanyUser
  createdBy String
  lastLogin DateTime
  passportImg String
  isActive Boolean [default: false]
  updated_at DateTime
  isEmailVerified Boolean [default: false]
  verificationCode String [unique]
  status UserStatus [not null, default: 'inactive']
  address String
  bio String
  emailNotification Boolean [default: false]
  campaignNtification Boolean [default: false]
  termsConditions Boolean [default: false]
  addedBy String [unique]
  userCircleIn UserCircles
  userCircleId String
  companyCirle CompanyCircles
  coyCircleAttachedTo String
  userCircles UserCircles [not null]
  coyCirclesList CompanyCircles [not null]
}

Table UserCircles {
  id String [pk]
  circleImg String
  created_at DateTime [default: `now()`]
  updated_at DateTime
  userCircleName String [unique]
  userCircleDescription String
  userCircleShareLink String
  wellbeingScore String
  activityLevel ActivityLevel [not null, default: 'low']
  user User
  userId String
  createdBy String
  userCircleStatus UserStatus [not null, default: 'inactive']
  userCircleNos String [unique]
  memberList User [not null]
}

Enum SystemRole {
  superAdmin
  admin
  user
}

Enum UserGender {
  male
  female
}

Enum UserStatus {
  active
  pending
  inactive
}

Enum AccountStatus {
  verified
  unverified
}

Enum CircleStatus {
  ongoing
  completed
  unenrolled
}

Enum ActivityLevel {
  high
  moderate
  excellent
  moderatelyHigh
  low
}

Enum UserAccount {
  personalUser
  clientUser
}

Enum MaitalStatus {
  married
  single
  divorce
}

Ref: CompanyCircles.companyUserId > CompanyUser.id

Ref: CompanyCircles.userAttachedID - User.id

Ref: User.createdBy > CompanyUser.id

Ref: User.userCircleId - UserCircles.id

Ref: User.coyCircleAttachedTo > CompanyCircles.id

Ref: UserCircles.userId - User.id